# africa_debt_overview

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
output/: chart_1_chart.csv  chart_1_download.csv  chart_2_chart.csv  chart_2_download.csv  chart_3_chart.csv  chart_3_download.csv  chart_4_chart.csv  chart_4_download.csv  chart_5_chart.csv  chart_5_download.csv  chart_6_download.csv  key_stat_chart_1.csv  key_stat_chart_2.csv  key_stat_chart_3.csv  key_stats.json
scripts/: analysis.py  config.py  extract_raw_data.py  logger.py  utils.py
