[project]
name = "africa_debt_overview"
version = "0.1.0"
description = "African debt overview page"

authors = [
  { name = "Luca Picci", email = "luca.picci@one.org" }
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bblocks-data-importers>=0.5.0",
    "bblocks-places>=0.0.4",
]




[dependency-groups]
dev = [

    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    "htmlcov",
]

# [tool.ruff.lint]
# select = [
#     "E", "W", "F",      # pycodestyle, pyflakes
#     "I",                 # isort
#     "N",                 # pep8-naming
#     "UP",                # pyupgrade
#     "B",                 # bugbear
#     "C4",                # comprehensions
#     "SIM",               # simplify
#     "PL",                # pylint
#     "RUF",               # ruff-specific
#     "ERA",               # commented code
#     "PERF",              # performance
# ]
#
# ignore = [
#     "E501",    # Line length (formatter handles)
#     "PLR0913", # Too many arguments
#     "PLR2004", # Magic values
# ]
#
# # Allow autofix for all enabled rules
# fixable = ["ALL"]
# unfixable = []
#
# [tool.ruff.lint.pydocstyle]
# convention = "google"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Like Black, automatically detect line endings
line-ending = "auto"

# [tool.mypy]
# python_version = "3.12"
#
# files = ["scripts/"]
#
#
# # Reasonable strictness (not full strict mode)
# ignore_missing_imports = true  # Don't error on untyped third-party packages
# warn_return_any = false
# warn_unused_configs = true
# disallow_untyped_defs = false
# disallow_incomplete_defs = true
# check_untyped_defs = true
# disallow_any_generics = false
# warn_redundant_casts = true
# warn_unused_ignores = true
# no_implicit_optional = true


